--- a/Frontend/src/app/layout/header/header.component.html
+++ b/Frontend/src/app/layout/header/header.component.html
@@ -11,7 +11,7 @@
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
        
-          <form class="form-inline my-2 my-lg-0 ml-5" >
+          <div class="form-inline my-2 my-lg-0 ml-5" >
             
             <div>
           
@@ -27,7 +27,7 @@
             </div>
           
           
-          </form>
+          </div>
          
      
     
