--- a/Frontend/src/app/layout/sidebar/sidebar.component.html
+++ b/Frontend/src/app/layout/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <button type="button" mat-raised-button class="btn btn-light btn-md   compose"
     
-    (click)="showComposed()"><i class="material-icons left mr-1" aria-hidden="true">add</i>Compose</button>
+    (click)="showComposed()"><i class="material-icons left " aria-hidden="true">add</i>Compose</button>
 
 
 
