--- a/Frontend/src/app/pages/compose/compose.component.html
+++ b/Frontend/src/app/pages/compose/compose.component.html
@@ -15,7 +15,7 @@
        </ul>
        
     </div>
-</div>
+</div>     
 
 <!--mat-card-actions class="actions">
   <i class="material-icons ml-3" aria-hidden="true" >open_in_full</i>
@@ -24,13 +24,14 @@
 
  </mat-card-headers>
  <mat-card-content>
-  <form [formGroup]="composeForm" (ngSubmit)="onSubmitCompose()">
+  <form [formGroup]="composeForm" >
             
 
    
    
       <mat-form-field class="too" floatLabel="never" hideRequiredMarker >
         <input matInput type="email" placeholder="To" formControlName="to" required >
+        
       </mat-form-field>
  
       
@@ -38,12 +39,14 @@
       <mat-form-field class="too" floatLabel="never" hideRequiredMarker>
         <input matInput type="text" placeholder="Subject" formControlName="subject">
       </mat-form-field>
- 
+<!--div [innerHtml]="composeForm.value.description"></div-->
+      <ckeditor [editor]="Editor" formControlName="description" ></ckeditor>
 
-      <mat-form-field  class="too" hideRequiredMarker appearance="leggacy">
-        <textarea matInput type="text"  rows="20" formControlName="content"></textarea>
-      </mat-form-field>
- 
+      <!-- <mat-form-field  class="too" hideRequiredMarker appearance="leggacy">
+        <textarea matInput type="text"  rows="20"></textarea>
+  
+      </mat-form-field> -->
+  
 
     
       
@@ -51,21 +54,38 @@
    
   <mat-card-actions class="row">
     
-        <button mat-button type="submit" class="btn btn-primary"  matTooltip="Send" matTooltipPosition="above">Send</button>
-        <li class="material-icons ml-3 mr-3" matTooltip="Attach files" matTooltipPosition="above">attach_file</li>
-        <li class="material-icons mr-3" matTooltip="Insert links" matTooltipPosition="above">insert_link</li>
-        <li class="material-icons mr-3" matTooltip="Insert emojis" matTooltipPosition="above"> tag_faces</li>
-        <li class="material-icons mr-3" matTooltip="Insert photo" matTooltipPosition="above">insert_photo</li>
-       
+        <button mat-button type="button" class="btn btn-primary" 
+        matTooltip="Send" matTooltipPosition="above"
+        (click)="onSubmitCompose($event)"
+        >Send</button>
+
+        <label id="upload_button">
+          <input type="file"
+          formControlName="files"
+          multiple>
+          <li class="material-icons ml-2 " matTooltip="Attach files"
+          
+          matTooltipPosition="above">attach_files</li>
+
+        </label>
+        <!--label id="upload_button">
+          <input type="file"
+          formControlName="files"
+          (change)="onFileSelect($event)"  multiple>
+          <li class="material-icons ml-2 " matTooltip="Attach files"
+          
+          matTooltipPosition="above">attach_files</li>
+
+        </label-->
+      
      
-     
-    </mat-card-actions>
+        </mat-card-actions>
    
   
   </form>
  </mat-card-content>
     
-        
+       
       
   </mat-card>
 
