--- a/Frontend/src/app/layout/sidebar/sidebar.component.html
+++ b/Frontend/src/app/layout/sidebar/sidebar.component.html
@@ -24,23 +24,13 @@
     <button type="button" mat-button class="btn btn-light btn-sm btn-block  rounded-pill"
     matTooltip="Sent" matTooltipPosition="after"
      (click)="onLoadsent()"><i class="fa fa-send mr-3" aria-hidden="true"></i>Sent</button>
-    <button type="button" mat-button class="btn btn-light btn-sm btn-block  rounded-pill"
-    matTooltip="Draft" matTooltipPosition="after"
-     (click)="onLoadDraft()" ><i class="fa fa-file mr-3" aria-hidden="true"></i>Draft</button>
-    <button type="button" mat-button class="btn btn-light btn-sm btn-block  rounded-pill"
-    matTooltip="Snoozed" matTooltipPosition="after"
-    ><i class="fa fa-clock-o mr-2" aria-hidden="true"></i>Snoozed</button>
-    <button type="button" mat-button class="btn btn-light btn-sm btn-block  rounded-pill"  (click)="onLoadimportant()"
-    matTooltip="Important" matTooltipPosition="after"
-     ><i class="fa fa-important mr-3" aria-hidden="true"></i>Important</button>
-    <button type="button" mat-button class="btn btn-light btn-sm btn-block  rounded-pill"
-    matTooltip="Chat" matTooltipPosition="after"
-    ><i class="fa fa-commenting mr-3" aria-hidden="true"></i>Chat</button>
-    <button type="button" mat-button class="btn btn-light btn-sm btn-block  rounded-pill"
-    matTooltip="Schedule" matTooltipPosition="after"
-    ><i class="fa fa-arrow-right mr-3" aria-hidden="true"></i>Schedule</button>
-    <button type="button" mat-button class="btn btn-light btn-sm btn-block  rounded-pill"
+
+     <button type="button" mat-button class="btn btn-light btn-sm btn-block  rounded-pill"
     matTooltip="All Mails" matTooltipPosition="after"
      (click)="onLoadallmail()"><i class="fa fa-envelope-o mr-3" aria-hidden="true"></i>All Mails</button>
+    <button type="button" mat-button class="btn btn-light btn-sm btn-block  rounded-pill"
+    matTooltip="Draft" matTooltipPosition="after" ><i class="fa fa-file mr-3" aria-hidden="true"></i>Draft</button>
+ 
+ 
     
     </div>
