--- a/Frontend/src/app/pages/auth/editprofile/editprofile.component.html
+++ b/Frontend/src/app/pages/auth/editprofile/editprofile.component.html
@@ -5,19 +5,21 @@
    <mat-card class="edit">
 <form   [formGroup]="editForm" (ngSubmit)="onUpdate()">
 
-  <p class="h4 mb-4">Update Your Profile !</p>
- <div *ngIf="error" class="text-danger">
+  <p class="h4 mb-4">Update Account</p>
+ <!-- <div *ngIf="error" class="text-danger">
   {{error}}
  </div>
  <div *ngIf="message" class="text-success">
   {{message}} 
- </div>
+ </div> -->
  <mat-card-content>
   <div class="form-row ">
       <div class="col">
           <!--##################################################### First name #############################################################-->
           <mat-form-field  class=""  appearance="standard">
             <mat-label>First Name</mat-label>
+            <mat-icon matSuffix>person</mat-icon>
+
            <input matInput type="text"  formControlName="first_name"  required>
             </mat-form-field>
          
@@ -31,6 +33,8 @@
           <!--########################################## Last name ########################################################################-->
           <mat-form-field  class=""  appearance="standard">
             <mat-label>Last Name</mat-label>
+            <mat-icon matSuffix>person</mat-icon>
+
            <input matInput type="text"      formControlName="last_name"  required>
             </mat-form-field>
           <div *ngIf="last_name.invalid && last_name.touched" >
@@ -44,6 +48,8 @@
   
   <mat-form-field  class="input"  appearance="standard">
     <mat-label>Recovery Email</mat-label>
+    <mat-icon matSuffix>email</mat-icon>
+
    <input matInput type="email"  formControlName="recovery_email" required>
     </mat-form-field>
     <div *ngIf="recovery_email.invalid && recovery_email.touched">
@@ -57,6 +63,8 @@
         <!--####################################### Password ###############################################################################-->
         <mat-form-field  class=""  appearance="standard">
           <mat-label>Password</mat-label>
+          <mat-icon matSuffix>lock</mat-icon>
+
          <input matInput type="password"  formControlName="password"  required>
           </mat-form-field>
         <div *ngIf="password.invalid && password.touched" >
@@ -68,6 +76,8 @@
         <!--############################################ confirm  pasword################## ###############################################-->
         <mat-form-field  class=""  appearance="standard">
           <mat-label>Confirm Password</mat-label>
+          <mat-icon matSuffix>lock</mat-icon>
+
          <input matInput type="password"   formControlName="confirm_password"  required>
           </mat-form-field>
 
@@ -85,6 +95,8 @@
   
   <mat-form-field  class="input"  appearance="standard">
     <mat-label>Phone Number</mat-label>
+    <mat-icon matSuffix>phone_enabled</mat-icon>
+
    <input matInput type="text"   formControlName="phone_number" required>
     </mat-form-field>
     <div *ngIf="phone_number.invalid && phone_number.touched" >
@@ -114,9 +126,9 @@
     <!-- ............................. -->
     <div class="col">
       <mat-form-field appearance="standard">
-        <mat-label>Select City</mat-label>
+        <mat-label>Select Gender</mat-label>
         <mat-select matNativeControl required formControlName="gender">
-          <mat-option value="Mail">Male</mat-option>
+          <mat-option value="Male">Male</mat-option>
           <mat-option value="Femail">Female</mat-option>
           <mat-option value="Others">Others</mat-option>
         </mat-select >
