--- a/Frontend/src/app/pages/auth/register/register.component.html
+++ b/Frontend/src/app/pages/auth/register/register.component.html
@@ -7,18 +7,20 @@
 <form   [formGroup]="registerForm" (ngSubmit)="onSubmit()">
 
   <p class="h4 mb-3">Create Your Account </p>
- <div *ngIf="error" class="text-danger">
-  {{message}}
+ <!-- <div *ngIf="error" class="text-danger"> -->
+  <!-- {{message}}
  </div>
  <div *ngIf="message" class="text-success">
   {{message}}
- </div>
+ </div> -->
 <mat-card-content>
   <div class="form-row ">
       <div class="col">
           <!--##################################################### First name #############################################################-->
           <mat-form-field  class=""  appearance="standard">
             <mat-label>First Name</mat-label>
+            <mat-icon matSuffix>person</mat-icon>
+
            <input matInput type="text"  formControlName="first_name"  required>
             </mat-form-field>
          
@@ -32,7 +34,9 @@
           <!--########################################## Last name ########################################################################-->
           <mat-form-field  class=""  appearance="standard">
             <mat-label>Last Name</mat-label>
-           <input matInput type="text"      formControlName="last_name"  required>
+            <mat-icon matSuffix>person</mat-icon>
+
+           <input matInput type="text"  formControlName="last_name"  required>
             </mat-form-field>
           <div *ngIf="last_name.invalid && last_name.touched" >
             <small *ngIf = "last_name.errors.required" class = "text-danger"> Last Name is required</small>
@@ -48,6 +52,8 @@
      <div class="col">
       <mat-form-field  class="input"  appearance="standard">
         <mat-label>E-mail</mat-label>
+        <mat-icon matSuffix>email </mat-icon>
+
        <input matInput type="email" formControlName="email" required>
         </mat-form-field>
         <div *ngIf="email.invalid && email.touched">
@@ -59,6 +65,8 @@
       
       <mat-form-field  class="input"  appearance="standard">
         <mat-label>Recovery Email</mat-label>
+        <mat-icon matSuffix>email</mat-icon>
+
        <input matInput type="email"  formControlName="recovery_email" required>
         </mat-form-field>
         <div *ngIf="recovery_email.invalid && recovery_email.touched">
@@ -75,6 +83,8 @@
         <!--####################################### Password ###############################################################################-->
         <mat-form-field  class=""  appearance="standard">
           <mat-label>Password</mat-label>
+          <mat-icon matSuffix>lock </mat-icon>
+
          <input matInput type="password"  formControlName="password"  required>
           </mat-form-field>
         <div *ngIf="password.invalid && password.touched" >
@@ -86,6 +96,8 @@
         <!--############################################ confirm  pasword################## ###############################################-->
         <mat-form-field  class=""  appearance="standard">
           <mat-label>Confirm Password</mat-label>
+          <mat-icon matSuffix>lock </mat-icon>
+
          <input matInput type="password"   formControlName="confirm_password"  required>
           </mat-form-field>
 
@@ -106,6 +118,8 @@
     <div class="col">
       <mat-form-field  class="input"  appearance="standard">
         <mat-label>Phone Number</mat-label>
+        <mat-icon matSuffix>phone_enabled </mat-icon>
+
        <input matInput type="text"   formControlName="phone_number" required>
         </mat-form-field>
         <div *ngIf="phone_number.invalid && phone_number.touched" >
@@ -114,6 +128,7 @@
         </div>
     </div>
     <div class="col-6 mt-md-4">
+      
       <input type="file" formControlName="image" (change)="onFileSelect($event)" required>
 
     </div>
@@ -126,6 +141,7 @@
     <div class="col" >
       <mat-form-field appearance="standard">
         <mat-label>Select City</mat-label>
+
         <mat-select matNativeControl required formControlName="city" >
         <mat-option value="Islamabad">Islamabad</mat-option>
         <mat-option value="Lahore">Lahore</mat-option>
@@ -143,9 +159,9 @@
     <!-- ............................. -->
     <div class="col">
       <mat-form-field appearance="standard">
-        <mat-label>Select City</mat-label>
+        <mat-label>Select Gender</mat-label>
         <mat-select matNativeControl required formControlName="gender">
-          <mat-option value="Mail">Male</mat-option>
+          <mat-option value="Male">Male</mat-option>
           <mat-option value="Femail">Female</mat-option>
           <mat-option value="Others">Others</mat-option>
         </mat-select >
