--- a/Frontend/src/app/pages/auth/reset-password/reset-password.component.html
+++ b/Frontend/src/app/pages/auth/reset-password/reset-password.component.html
@@ -9,12 +9,12 @@
 <form [formGroup]="resetForm" (ngSubmit)="save()"  >
 
     <p class="h4 mb-4">Reset Password </p>
-    <div *ngIf="error" class="text-danger">
+    <!-- <div *ngIf="error" class="text-danger">
       {{error}}
      </div>
      <div *ngIf="message" class="text-success">
       {{message}}
-     </div>
+     </div> -->
 
    
 
@@ -23,6 +23,8 @@
 
       <mat-form-field  class="input"  appearance="standard">
       <mat-label>Password</mat-label>
+      <mat-icon matSuffix>lock </mat-icon>
+
       <input matInput type="password" formControlName="password" required>
        </mat-form-field>
   
@@ -34,6 +36,8 @@
 
       <mat-form-field  class="input"  appearance="standard">
         <mat-label>Confirm Password</mat-label>
+        <mat-icon matSuffix>lock </mat-icon>
+
         <input matInput type="password" formControlName="confirm_password" required>
          </mat-form-field>
     
