--- a/Frontend/src/app/pages/pagenotfound/pagenotfound.component.css
+++ b/Frontend/src/app/pages/pagenotfound/pagenotfound.component.css
@@ -1,5 +1,6 @@
 .page{
-    margin-top: 3rem;
-    margin-left: 1.5rem;
-    height: 150px;
-}
+text-align: center;
+text-shadow: 0ch;
+text-decoration: dotted;
+text-emphasis : bold
+}  
