--- a/Frontend/src/app/pages/pagenotfound/pagenotfound.component.html
+++ b/Frontend/src/app/pages/pagenotfound/pagenotfound.component.html
@@ -1,10 +1,7 @@
 
-<mat-card class="page">
-    <mat-card-content class="page">
-        <h1 class="page">404 Error : Page Not Found !</h1>
-    </mat-card-content>
-    
-
+<mat-card >
+    <h1 class="page">Page Not Found</h1>
+        <img  src="../../../assets/404.png"  class="im-fluid"/>
 </mat-card>
 
 
