--- a/Frontend/src/app/pages/public/home/home.component.html
+++ b/Frontend/src/app/pages/public/home/home.component.html
@@ -1,39 +1,40 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-light m-auto">
+  <a class="navbar-brand" href="#"><img class="mr-2" src="../../../../assets/Logo.png"
+      style="width: 50px; height: 45px;">A-Mail</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light m-auto">
-      <a class="navbar-brand" href="#"><img class = "mr-2"  src="../../../../assets/Logo.png" style="width: 50px; height: 45px;">A-Mail</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-   
-    
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-         
-            
-           
-       
-      
-      
-  
-        <ul class="navbar-nav ml-auto nav-flex-icons">
-         
-          <li class="nav-item">
-         
-              <a class="nav-link" href="register" (click)="register()">Register</a>
-           
-          </li>
-          <li class="nav-item mr-4">
-         
-            <a class="nav-link" href="login" (click)="login()">Login</a>
-         
-        </li>
-      
-        
-        </ul>
-      </div>
-    </nav>
-    
-      <!--div class="row mt-4">
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+
+
+
+
+
+
+    <ul class="navbar-nav ml-auto nav-flex-icons">
+
+
+      <li class="nav-item">
+
+        <a class="nav-link" href="register" (click)="register()">Register</a>
+
+      </li>
+      <li class="nav-item mr-4">
+
+        <a class="nav-link" href="login" (click)="login()">Login</a>
+
+      </li>
+
+
+    </ul>
+  </div>
+</nav>
+
+<!--div class="row mt-4">
         <div class="col-md-4">
           <h3>Compose Your Emails</h3>
           <img  class="img-fluid  mr-5" src="../../../assets/mail3.jpg" alt=" image" style = "height: 450px;">
@@ -47,37 +48,38 @@
           <img  class="img-fluid  mr-5" src="../../../assets/edit.jpg" alt=" image" style = "height: 450px;">
         </div>
       </div-->
-      <mat-card class="home">
-         <mat-card-content class="mt-4">
-          <h1 class="a" >Email With Edit Mail Feature </h1>
-          <div class="row">
-            <div class="col-md-7">
-              <div class= "">
-                <!--h1 class= "ml-4" style="font-family:Verdana, Geneva, Tahoma, sans-serif">Mail Serve With Edit Mail Feature !</h1-->
-                <div class= "text" style="font-family: 'Roboto'; font-size: 21px;">
-                  <p > System will be mostly help in official works. </p>
-                  <p class="mt-5"> Our main purpose is to save the user's 
-                    time by composing new mails that the user sent already.</p>
-                  <p class="mt-5"> If user needs to send the same email 
-                    again then user will just search the mail through subject then can edit that email and send that email again.
-                    </p>
-                    <p class="mt-5">
-                      It gives helpful suggestions of messages about starting message body, and ending writing message etc. </p>
-                    
-               
-              
-                  </div>
-                
-          
-               </div>
-           
-    
-            </div>
-            <div class="col-md-5">
-              <img  class="img-fluid  mr-3" src="../../../assets/front.png" alt=" image" style = "height: 500px; width: 700px;;">
-            </div>
-          </div>
-           <p class="h3 mb-2" style="text-align: center; font-family: 'Calistoga', sans-serif; font-size: 30px;" >Features</p>
+<mat-card class="home">
+  <mat-card-content>
+    <div class="row">
+      <div class="col-md-6 sideImg">
+        <!-- <img  class="img-fluid  mr-3" src="../../../../assets/undraw_message_sent_1030.png" alt=" image" style = "height: 500px; width: 800px;;"> -->
+      </div>
+      <div class="col-md-6 mt-3">
+        <h1 class="a my-3">Auto Email Reply Generator </h1>
+
+        <!--h1 class= "ml-4" style="font-family:Verdana, Geneva, Tahoma, sans-serif">Mail Serve With Edit Mail Feature !</h1-->
+        <div class="text">
+          <p> System will mostly help in official works. </p>
+          <p class="mt-3"> Our main purpose is to save the user's
+            time by composing new mails that the user sent already.</p>
+          <p class="mt-3"> If user needs to send the same email
+            again then user will just search the mail through subject then if the email is already
+            exist then the system will generate its body automatically
+            will placed in composer then user can edit that email and send that email again.
+          </p>
+
+
+
+        </div>
+
+
+
+
+
+      </div>
+
+    </div>
+    <!-- <p class="h3 mb-2" style="text-align: center; font-family: 'Calistoga', sans-serif; font-size: 30px;" >Features</p>
            <div class="row mt-5">
              <div class="col-4">
               <mat-card class="example-card">
@@ -133,19 +135,7 @@
               </mat-card>
               
              </div>
-           </div>
-        </mat-card-content>
-      
-      </mat-card>
-      
+           </div> -->
+  </mat-card-content>
 
-    
-
-     
-
-
-
-
-
-
-     
+</mat-card>
