--- a/Frontend/src/app/pages/auth/login/login.component.html
+++ b/Frontend/src/app/pages/auth/login/login.component.html
@@ -50,7 +50,7 @@
                     </div>
                     <div>
                         <!-- Forgot password -->
-                        <a href="email" (click)="Email()">Forgot password?</a>
+                        <a routerLink="email" (click)="Email()" style = "text-decoration: none;">Forgot password?</a>
                     </div>
                 </div>
             </mat-card-content>
@@ -65,7 +65,7 @@
 
                 <!-- Register -->
                 <p>Not a Member?
-                    <a href="/register" (click)="register()">Register</a>
+                    <a routerLink="/register" (click)="register()"  style = "text-decoration: none;">Register</a>
                 </p>
 
 
