--- a/Frontend/src/app/pages/auth/register/register.component.html
+++ b/Frontend/src/app/pages/auth/register/register.component.html
@@ -186,7 +186,7 @@
   </mat-card-actions>
 
   <p>Already have an Account?
-    <a href="login"   (click)="login()">Login Here</a>
+    <a routerLink="login"   (click)="login()"  style = "text-decoration: none;">Login Here</a>
 </p>
  
 </form>
