--- a/Frontend/src/app/pages/public/home/home.component.css
+++ b/Frontend/src/app/pages/public/home/home.component.css
@@ -3,12 +3,15 @@
   margin-left: 4rem;
     font-size : 25px;
     color :black;
-    text-shadow: 25px 2px 30px #050505;
   }   
 
 
 .a{
-font-family: 'Calistoga', sans-serif; font-size: 40px;
+  text-shadow: 0 0 3px #554b4c, 0 0 5px #202022;
+
+font-family: 'Calistoga', sans-serif; 
+font-family: Tahoma, Verdana, sans-serif;font-size: 45px;
+
 margin-top: 2rem;
 margin-bottom: 2rem;
 margin-left: 5rem;
@@ -21,7 +24,11 @@ text-emphasis:bold;
   font-size: 120px;
   text-align: left;
   font-weight: bold;
-  font-family:'Courier New', Courier, monospace;
+ /* / font-family:'Courier New', Courier, monospace; */
+  font-family: "Lucida Console", "Courier New", monospace;
+
   font-weight: 500;
+  line-height: 1.1;
+
 
  }
