--- a/Frontend/src/app/pages/public/home/home.component.html
+++ b/Frontend/src/app/pages/public/home/home.component.html
@@ -20,12 +20,12 @@
 
       <li class="nav-item">
 
-        <a class="nav-link" href="register" (click)="register()">Register</a>
+        <a class="nav-link" routerLink="register" (click)="register()">Register</a>
 
       </li>
       <li class="nav-item mr-4">
 
-        <a class="nav-link" href="login" (click)="login()">Login</a>
+        <a class="nav-link" routerLink="login" (click)="login()">Login</a>
 
       </li>
 
@@ -59,10 +59,10 @@
 
         <!--h1 class= "ml-4" style="font-family:Verdana, Geneva, Tahoma, sans-serif">Mail Serve With Edit Mail Feature !</h1-->
         <div class="text">
-          <p> System will mostly help in official works. </p>
-          <p class="mt-3"> Our main purpose is to save the user's
-            time by composing new mails that the user sent already.</p>
-          <p class="mt-3"> If user needs to send the same email
+          <p class="mt-3"> System will mostly help in official work.
+            Our main purpose is to save the user's
+            time by composing new mails that the user sent already.
+             If user needs to send the same email
             again then user will just search the mail through subject then if the email is already
             exist then the system will generate its body automatically
             will placed in composer then user can edit that email and send that email again.
