--- a/Frontend/src/app/shared/components/mail/mail.component.html
+++ b/Frontend/src/app/shared/components/mail/mail.component.html
@@ -13,8 +13,9 @@
 
 
         <div class="col-lg-8">
+          <span class="">{{mail.user_name}}</span>
 
-          <span class="">{{mail.subject || mail.from}}</span>
+          <span class="ml-2">{{mail.subject || mail.from}}</span>
           <!-- <span class="">{{mail.subject || mail.userName}}</span> -->
 
           <span class="ml-2">{{mail.description}}</span>
@@ -23,7 +24,7 @@
         </div>
         <div class="col-lg-2">
 
-          <span class="ml-2"> {{mail.date}}</span>
+          <span class="ml-2"> {{mail.date | date:'fullDate'}}</span>
         </div>
 
 
