--- a/Frontend/src/app/pages/compose/compose.component.html
+++ b/Frontend/src/app/pages/compose/compose.component.html
@@ -37,10 +37,16 @@
       
 
       <mat-form-field class="too" floatLabel="never" hideRequiredMarker>
-        <input matInput type="text" placeholder="Subject" formControlName="subject">
+        <input matInput type="text" placeholder="Subject" formControlName="subject"
+        (change)="oneEnterSubject()"
+        >
       </mat-form-field>
 <!--div [innerHtml]="composeForm.value.description"></div-->
-      <ckeditor [editor]="Editor" formControlName="description" ></ckeditor>
+  <mat-spinner *ngIf="showSpinner" [diameter]="30" style="float:right;"></mat-spinner>
+
+      <ckeditor [editor]="Editor" formControlName="description">
+
+      </ckeditor>
 
       <!-- <mat-form-field  class="too" hideRequiredMarker appearance="leggacy">
         <textarea matInput type="text"  rows="20"></textarea>
@@ -62,7 +68,8 @@
         <label id="upload_button">
           <input type="file"
           formControlName="files"
-          multiple>
+          (change)="onFileSelect($event)"
+          multiple/>
           <li class="material-icons ml-2 " matTooltip="Attach files"
           
           matTooltipPosition="above">attach_files</li>
