--- a/Frontend/src/app/pages/mail-details/mail-details.component.html
+++ b/Frontend/src/app/pages/mail-details/mail-details.component.html
@@ -1,6 +1,6 @@
 <div class="mail mt-3 mr-3">
     <div class="mt-4" *ngIf="email">
-        <p class="h3 mb-2" >{{email.subject ||"(no subject)"}}</p>
+        <p class="h4 mb-2" >{{email.subject ||"(no subject)"}}</p>
 
       <div class="row ">
         <div class="col-12">
@@ -8,20 +8,26 @@
            <p class=" mb-2" >To :{{email.to}}</p>
            <p class=" mb-2" >From : {{email.from}}</p>
            <p class=" mb-2" >Date : {{email.date | date:'fullDate' }}</p>
-           <p class=" mb-2" >Description : {{email.description}}</p>
+           
+           <hr>
+            <span class=" mb-2" [innerHTML]="email.description" ></span>
+           
+
 
 
         </div>
      
         
       </div>
-      <hr>
+      <div *ngIf="email.files && email.files.length > 0">
+        <hr>
+
 <div *ngIf="email.files&&email.files.length>0">
       <div *ngFor="let file of email.files" class="col-md-3">
-      {{imageExtension(file)}}
-        <img  *ngIf="imageExtension(file)" [src]="'http://68.183.107.82:3000/'+file" style="width: 50px;height: 50px;"/>
-        <a [href]="'http://68.183.107.82:3000/'+file" *ngIf="!imageExtension(file)">xDownloadOptions</a>
+        <img  *ngIf="imageExtension(file)" [src]="'http://162.243.166.89:3000/'+file" style="width: 50px;height: 50px;"/>
+        <a [href]="'http://162.243.166.89:3000/'+file" *ngIf="!imageExtension(file)">DownloadOptions</a>
       </div>
+</div>
 </div>
       <button class="btn btn-danger mt-2" (click)="onDeleteEmail()">Delete</button>
     </div>
